[gd_scene load_steps=5 format=2]

[ext_resource path="res://LevelElements/Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://LevelElements/SideDetect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Penguin.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 30 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 320, 420 )
z_index = 99
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, 33 )
shape = SubResource( 1 )

[node name="SideDetect" parent="." instance=ExtResource( 3 )]
position = Vector2( 40, 33 )
water_stop = true

[node name="Penguin" type="Sprite" parent="."]
position = Vector2( 50, 29.5017 )
z_index = 3
texture = ExtResource( 4 )

[node name="WarmthCollector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WarmthCollector"]
position = Vector2( 40, 33 )
shape = SubResource( 1 )
[connection signal="area_entered" from="WarmthCollector" to="." method="_on_WarmthCollector_area_entered"]
[connection signal="area_exited" from="WarmthCollector" to="." method="_on_WarmthCollector_area_exited"]
